k8s/learning/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - drawsome.pictures
    secretName: drawsome-pictures-tls
  rules:
  - host: drawsome.pictures
    http: 
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 8080
